tests/paczka1/fuzzy1/16693177.err
Error in line 2: kcFDswq S510 26,3
Error in line 4: A616 S767 75,90
Error in line 3: kcFDswq A616 70,4
Error in line 1: oSB4n34R S943 74,0
Error in line 8: oSB4n34R S767 87,7
Error in line 16: oSB4n34R A616 142,3
Error in line 10: o3B8 S767 96,8
Error in line 18: WMLqa A616 49,5
Error in line 21: WMLqa S767 67,8
Error in line 22: A616 A616 95,0
Error in line 30: o3B8 A616 73,6
Error in line 33: oSB4n34R S767 0,1
Error in line 35: oSB4n34R S943 43,5
